--- a/mchicaizaS6A.csproj
+++ b/mchicaizaS6A.csproj
@@ -66,6 +66,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\vActualizarEliminar.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\vAnadir.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Vcrud.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
